# algorithm-note

./: CMakeLists.txt  cico.cpp  date.cpp  helloworld.cpp  install_vscode_plugins.sh  lop.cpp  p_p_vector.cpp  p_swap.cpp  p_tree.cpp  prime.cpp  prime2.cpp  ptr.cpp  str.cpp
01/: helloworld.cpp
01/algorithm/: topo.cpp
01/algorithm/tests/: topo.cpp:tests
01/datastruct/: basic.cpp  link.cpp  link_list.cpp  linked.cpp  squeue.cpp  sstack.cpp  test.cpp  tqueue.cpp  快速幂.cpp  高精度乘除.cpp  高精度加减.cpp
01/datastruct/BT/: atree.cpp  avl1.cpp  bst1.cpp  bt1.cpp  并查集.cpp
01/datastruct/graph/: SPFA.cpp  dijkstra.cpp  fio.cpp  floyd.cpp  ford.cpp  key_road.cpp  kruskal.cpp  prim.cpp  topo.cpp  邻接矩阵.cpp  邻接表.cpp
MarketSystem/: Data.txt  Data_1.txt  README.md  Users.txt  Users_1.txt  main.c  main.md  main_1.md
NOTE/: lambda比较函数和其他.md  输出格式.md
allIn/: 1000.cpp  1001.cpp  2000ascii.cpp  2001distance.cpp  2002bv.cpp  2003abs.cpp  2004.cpp  2005.cpp  2006.cpp  2007.cpp  2008.cpp  2009.cpp  2010.cpp  2011.cpp  2012.cpp  2013.cpp  2014.cpp  2015.cpp  2016.cpp  2017.cpp  2018.cpp  2019.cpp  2020.cpp  2021.cpp  2022.cpp  2023.cpp  2024.cpp  2025.cpp  2026.cpp  2027.cpp  2028.cpp  2029.cpp  2030.cpp  2031.cpp  2032.cpp  2033.cpp  2034.cpp  2035.cpp  2036.cpp  2037.cpp  (+9 more)
claude/: arrInt.md  arrString.md  date.md  get.md  im.md  istringstream.md  kword.md  ma.md  map.md  mapVector.md  memset.md  p_p_arr.md  remove.md  setSe.md  string.md  test.md  testmd.cpp  time.md  todigit.md  vecto.md  vector.md  尖括号.md  汉字.md
claude/STL/: STL1.md  STL2.md  containerAdapters1.md  containerAdapters12.md  containerAdapters2.md  list1.md  list2.md  priority_queue.md  priority_queue示例.md
claude/bits/: stdc++.md
coAdapter/: gcd_lcm.cpp  stack.cpp
date/: Heap堆.md  greater.md  greater使用示例.md  大顶堆和小顶堆.md  小顶堆.md
dg/: poww.cpp  varr.cpp
gorithm/: Node.cpp  adj.cpp  compare.cpp  node.md  node1.md  oprator.md  oprator1.md  oprator2.md  oprator3.md  oprator4.md  testNode.cpp  unordered.md  unordered_map_map.md
gorithm/Heap/: max_min_heap.cpp  vec_min_heap.cpp
gorithm/Subsequence/: Longest.cpp  LongetString.cpp  MaxConSum.cpp  MaxProduct.cpp  MaxSum.cpp
gpt/: arrInt.md  arrString.md
lanqiao/: 01dp.cpp  01dp303.cpp  01dp5118.cpp  1113queue.cpp  1216-1.cpp  1216.cpp  2098.cpp  5-2.cpp  592.cpp  7-3.cpp  bfs.cpp  bfs318.cpp  dfs.cpp  test.cpp  testlp.cpp  数位DP.cpp
lanqiao/23/: 3505_买瓜.cpp  3533_棋盘.cpp  3542_魔法阵.cpp
lanqiao/BFS/: 602_迷宫.cpp
lanqiao/DFS/: 3935_仙境诅咒.cpp  505_数字三角形.cpp  552_受伤的皇后.cpp  89_路径之谜.cpp
lanqiao/DP/: 1175_小明的背包2.cpp  244_最长子序列.cpp  553_跳跃.cpp
lanqiao/DP/数位/: 2226_好数之和.cpp
lanqiao/Dif/: 1276_小明的彩灯.cpp
lanqiao/normal/: 19694_五子棋对弈.cpp  19701_穿越时空之门.cpp  19705_成绩统计.cpp  19709_好数.cpp  19710_R格式.cpp  19712_数字接龙.cpp  19715_回文数组.cpp  19717_挖矿.cpp  19718_回文字符串.cpp  20096_开赛主题曲.cpp
lanqiao/note/: query.md
lanqiao/past/: 01dp303.cpp  01dp5118.cpp  110.cpp  1113queue.cpp  1216-1.cpp  1216.cpp  1443.cpp  2219.cpp  330dp.cpp  3510.cpp  3615.cpp  3615_2.cpp  3818.cpp  3959.cpp  502.cpp  504.cpp  592.cpp  7-3.cpp  bfs.cpp  bfs318.cpp  dfs.cpp  testlp.cpp
lanqiao/past_paper/: ald.cpp  test.cpp
lanqiao/past_paper/20B/: 1019_扩散.cpp  1022_玩具蛇.cpp  1025_答疑.cpp  348_回文日期.cpp
lanqiao/past_paper/20C/: 1456_括号序列.cpp  2383_卡片.cpp
leetcode/: 169.cpp  1738.md  3.cpp  testleet.cpp
leetcode/DFS/: 1508_N皇后问题.cpp  3935_仙境诅咒.cpp
leetcode/DP/: LCR_095_最长公共子序列.cpp
leetcode/link_list/: 206反转数组.cpp  735_小行星碰撞.cpp  LCR140.cpp
leetcode/past/: 1738.md  2225.cpp  349.cpp  testleet.cpp
leetcode/recursion/: hannota-lcci.cpp
leetcode/search/: 200.cpp  LC 200.cpp  LC_200.cpp
leetcode/stack/: 42_接雨水.cpp
leetcode/tarjan/: 割点和桥.cpp  强连通分量.cpp
leetcode/二分/: LCR073_爱吃香蕉的狒狒.cpp
leetcode/分治/: 53.cpp
leetcode/贪心/: 2611.cpp
luogu/: test.cpp
luogu/BFS/: P1032_[NOIP2002提高组]字串变换.cpp  P1135_奇怪的电梯.cpp  P1443.cpp  P8674_调手表.cpp  P8693.cpp
luogu/C(n,m)/: 1.cpp
luogu/DFS/: P1025.cpp  P1036_[NOIP2002普及组]选数.cpp  P1219_[USACO1.5]_八皇后_Checker_Challenge.cpp  P1332_血色先锋队.cpp  P1464_Function.cpp  P1605_迷宫.cpp  P1706.cpp
luogu/DP/: B3637_最长上升子序列.cpp  P1048_[NOIP2005普及组]采药.cpp  P1048_[NOIP2005普及组]采药1.cpp  P1616_疯狂的采药.cpp  P2758_编辑距离.cpp
luogu/Diff/: P2367_语文成绩.cpp
luogu/Enum/: P8667_[蓝桥杯2018省B]递增三元组.cpp
luogu/Grath/: P1462_通往奥格瑞玛的道路.cpp  P8802_[蓝桥杯2022国B]出差.cpp
luogu/IO/: rd.cpp
luogu/M/: m.cpp
luogu/Mos/: P1972.cpp  P2709_小B的询问.cpp
luogu/note/: bitset1.md
luogu/二分/: P1873_砍树.cpp  P2678_[NOIP2015提高组]跳石头.cpp
luogu/前缀和/: P1387_最大正方形.cpp
luogu/差分/: P3397_地毯.cpp
luogu/并查集/: 1551.cpp  P1525_[NOIP2010提高组]关押罪犯.cpp  P3367.cpp
luogu/快速幂/: P1226.cpp
luogu/枚举模拟/: P1003_铺地毯.cpp
luogu/栈/: B3614.cpp  P5788.cpp
luogu/模拟/: P1101_单词方阵.cpp
luogu/贪心/: P1090.cpp  P4995.cpp
note11/: cin_scanf.cpp  cin_scanff.md  multisett.md
pta/: L1-7.cpp  L2-1.cpp  L2-2.cpp  L2-3.cpp  model.cpp  test.cpp
pta/basicLevel/: 1003.cpp  1005.cpp  1097.cpp  1100.cpp  1102.cpp  1104.cpp  1108.cpp  1109.cpp  1115.cpp  1119.cpp  1123.cpp  1124.cpp  1125.cpp  testb.cpp
pta/data_structure/: 7-1.cpp  7-15.cpp  7-16.cpp  7-18.cpp  7-19.cpp  7-2.cpp  7-24.cpp  7-26.cpp  7-30.cpp  7-37.cpp  7-38.cpp  7-40.cpp  7-45.cpp  7-5min_heap.cpp
pta/past_papers/: 1-005.cpp  1-006.cpp  1-009.cpp  1-011.cpp  1-015.cpp  1-016.cpp  1-017.cpp  1-018.cpp  1-020.cpp  1-023.cpp  1-025.cpp  1-027.cpp  1-030.cpp  1-032.cpp  1-033.cpp  1-034.cpp  1-035.cpp  1-039.cpp  1-043.cpp  1-044.cpp  1-046.cpp  1-048.cpp  1-049-1.cpp  1-049.cpp  1-054.cpp  1-058.cpp  1-064.cpp  1-093.cpp  1-094.cpp  1-095.cpp  1-096.cpp  1-2.cpp  1-3.cpp  1-4.cpp  L2-001.cpp  L2-002.cpp  L2-004.cpp  L2-022.cpp  L2-048.cpp  L3-002.cpp  (+2 more)
pta/remind/: 1-11.cpp  1-16.cpp  1-20.cpp  1-23.cpp  1-30.cpp  1-34.cpp  1-43.cpp  1-46.cpp  1-5.cpp  1-6.cpp  1-64.cpp  1-7.cpp  1-71.cpp  1-8.cpp  test.cpp
review/: 快速幂.cpp  高精度.cpp
tests/: helloworld.cpp:tests  lop.cpp:tests  topo.cpp:tests
the_begin/: cico.cpp  cltest.cpp  days_between_dates.cpp  dcbfzvxgvcbfdvcx.cpp  helloworld.cpp  myarray.cpp  p_p_arr.cpp  prime.cpp  printn.cpp  ptr.cpp  randd.cpp  rannd.cpp
(+23 files in other folders)
