cmake_minimum_required(VERSION 3.27)
project(running)

set(CMAKE_CXX_STANDARD 17)

add_executable(main MarketSystem/main.c)
add_executable(helloworld helloworld.cpp)
add_executable(cico cico.cpp)
add_executable(stri str.cpp)
add_executable(lop lop.cpp)
add_executable(distance allIn/2001distance.cpp)
add_executable(cost allIn/cost.cpp)
add_executable(tes allIn/tes.cpp)
add_executable(randd randd.cpp)
add_executable(rannd rannd.cpp)
add_executable(myarray myarray.cpp)

add_executable(2000ascii allIn/2000ascii.cpp)
add_executable(2001distance allIn/2001distance.cpp)
add_executable(2002bv allIn/2002bv.cpp)
add_executable(2003abs allIn/2003abs.cpp)
add_executable(2004 allIn/2004.cpp)
add_executable(2005 allIn/2005.cpp)
add_executable(2006 allIn/2006.cpp)
add_executable(2007 allIn/2007.cpp)
add_executable(2008 allIn/2008.cpp)
add_executable(2009 allIn/2009.cpp)
add_executable(2010 allIn/2010.cpp)
add_executable(2011 allIn/2011.cpp)
add_executable(2012 allIn/2012.cpp)
add_executable(2013 allIn/2013.cpp)
add_executable(2014 allIn/2014.cpp)
add_executable(2015 allIn/2015.cpp)
add_executable(2016 allIn/2016.cpp)
add_executable(2017 allIn/2017.cpp)
add_executable(2018 allIn/2018.cpp)
add_executable(2019 allIn/2019.cpp)
add_executable(2020 allIn/2020.cpp)
add_executable(2021 allIn/2021.cpp)
add_executable(2022 allIn/2022.cpp)
add_executable(2023 allIn/2023.cpp)
add_executable(2024 allIn/2024.cpp)
add_executable(2025 allIn/2025.cpp)
add_executable(2026 allIn/2026.cpp)
add_executable(2027 allIn/2027.cpp)
add_executable(2028 allIn/2028.cpp)
add_executable(2029 allIn/2029.cpp)
add_executable(2030 allIn/2030.cpp)
add_executable(2031 allIn/2031.cpp)
add_executable(2032 allIn/2032.cpp)
add_executable(1000 allIn/1000.cpp)
add_executable(2033 allIn/2033.cpp)
add_executable(2034 allIn/2034.cpp)
add_executable(2035 allIn/2035.cpp)
add_executable(2036 allIn/2036.cpp)
add_executable(2037 allIn/2037.cpp)
add_executable(2040 allIn/2040.cpp)
add_executable(2039 allIn/2039.cpp)
add_executable(1001 allIn/1001.cpp)
add_executable(ptr ptr.cpp)
add_executable(p_swap p_swap.cpp)
add_executable(2051 allIn/2051.cpp)
add_executable(2052 allIn/2052.cpp)
add_executable(2054 allIn/2054.cpp)
add_executable(p_p_arr p_p_arr.cpp)
add_executable(p_p_vector p_p_vector.cpp)
add_executable(2043 allIn/2043.cpp)
add_executable(2055 allIn/2055.cpp)
add_executable(printn printn.cpp)
add_executable(1-3 pta/past_papers/1-3.cpp)
add_executable(poww dg/poww.cpp)
add_executable(varr dg/varr.cpp)
add_executable(test pta/test.cpp)
add_executable(1-2 pta/past_papers/1-2.cpp)
add_executable(1-4 pta/past_papers/1-4.cpp)
add_executable(1-096 pta/past_papers/1-096.cpp)
add_executable(1-095 pta/past_papers/1-095.cpp)
add_executable(1-094 pta/past_papers/1-094.cpp)
add_executable(1-006 pta/past_papers/1-006.cpp)
add_executable(1-009 pta/past_papers/1-009.cpp)
add_executable(1-011 pta/past_papers/1-011.cpp)
add_executable(1-015 pta/past_papers/1-015.cpp)
add_executable(1-016 pta/past_papers/1-016.cpp)
add_executable(1-017 pta/past_papers/1-017.cpp)
add_executable(date date.cpp)
add_executable(1-018 pta/past_papers/1-018.cpp)
add_executable(1-020 pta/past_papers/1-020.cpp)
add_executable(1-023 pta/past_papers/1-023.cpp)
add_executable(1-025 pta/past_papers/1-025.cpp)
add_executable(1-027 pta/past_papers/1-027.cpp)
add_executable(prime prime.cpp)
add_executable(prime2 prime2.cpp)
add_executable(1-030 pta/past_papers/1-030.cpp)
add_executable(1-032 pta/past_papers/1-032.cpp)
add_executable(1-033 pta/past_papers/1-033.cpp)
add_executable(1-034 pta/past_papers/1-034.cpp)
add_executable(1-035 pta/past_papers/1-035.cpp)
add_executable(1-039 pta/past_papers/1-039.cpp)
add_executable(1-044 pta/past_papers/1-044.cpp)
add_executable(p_tree p_tree.cpp)
add_executable(1-005 pta/past_papers/1-005.cpp)
add_executable(1-048 pta/past_papers/1-048.cpp)
add_executable(1-058 pta/past_papers/1-058.cpp)
add_executable(1-043 pta/past_papers/1-043.cpp)
add_executable(1-046 pta/past_papers/1-046.cpp)
add_executable(testmd claude/testmd.cpp)
add_executable(max_heap gorithm/Heap/max_min_heap.cpp)
add_executable(min_heap coAdapter/stack.cpp)
add_executable(gcd_lcm coAdapter/gcd_lcm.cpp)
add_executable(1-049 pta/past_papers/1-049.cpp)
add_executable(1-054 pta/past_papers/1-054.cpp)
add_executable(1-064 pta/past_papers/1-064.cpp)
add_executable(L1-049-1 pta/past_papers/1-049-1.cpp)
add_executable(node gorithm/Node.cpp)
add_executable(1125 pta/basicLevel/1125.cpp)
add_executable(1124 pta/basicLevel/1124.cpp)
add_executable(testb pta/basicLevel/testb.cpp)
add_executable(1123 pta/basicLevel/1123.cpp)
add_executable(testNode gorithm/testNode.cpp)
add_executable(1119 pta/basicLevel/1119.cpp)
add_executable(1109 pta/basicLevel/1109.cpp)
add_executable(1108 pta/basicLevel/1108.cpp)
add_executable(compare gorithm/compare.cpp)
add_executable(1102 pta/basicLevel/1102.cpp)
add_executable(1104 pta/basicLevel/1104.cpp)
add_executable(1115 pta/basicLevel/1115.cpp)
add_executable(L3-002 pta/past_papers/L3-002.cpp)
add_executable(1100 pta/basicLevel/1100.cpp)
add_executable(1097 pta/basicLevel/1097.cpp)
add_executable(dfs lanqiao/dfs.cpp)
add_executable(bfs lanqiao/bfs.cpp)
add_executable(1216 lanqiao/1216.cpp)
add_executable(1216-1 lanqiao/1216-1.cpp)
add_executable(L2-048 pta/past_papers/L2-048.cpp)
add_executable(01dp5118 lanqiao/01dp5118.cpp)
add_executable(01dp303 lanqiao/01dp303.cpp)
add_executable(testlp lanqiao/testlp.cpp)
add_executable(bfs318 lanqiao/bfs318.cpp)
add_executable(7-3 lanqiao/7-3.cpp)
add_executable(L2-2 pta/L2-2.cpp)
add_executable(L2-1 pta/L2-1.cpp)
add_executable(L2-3 pta/L2-3.cpp)
add_executable(5-2 lanqiao/5-2.cpp)
add_executable(L1-7 pta/L1-7.cpp)
add_executable(330dp lanqiao/330dp.cpp)
add_executable(adj gorithm/adj.cpp)
add_executable(L3-037 pta/past_papers/L3-037.cpp)
add_executable(1113queue lanqiao/1113queue.cpp)
add_executable(7-1 pta/data_structure/7-1.cpp)
add_executable(7-2 pta/data_structure/7-2.cpp)
add_executable(Longest gorithm/Subsequence/Longest.cpp)
add_executable(MaxSum gorithm/Subsequence/MaxSum.cpp)
add_executable(MaxConSum gorithm/Subsequence/MaxConSum.cpp)
add_executable(MaxProduct gorithm/Subsequence/MaxProduct.cpp)
add_executable(LongetString gorithm/Subsequence/LongetString.cpp)
add_executable(vec_min_heap gorithm/Heap/vec_min_heap.cpp)
add_executable(7-5min_heap pta/data_structure/7-5min_heap.cpp)
add_executable(7-16 pta/data_structure/7-16.cpp)
add_executable(L2-001 pta/past_papers/L2-001.cpp)
add_executable(7-15 pta/data_structure/7-15.cpp)
add_executable(7-18 pta/data_structure/7-18.cpp)
add_executable(7-19 pta/data_structure/7-19.cpp)
add_executable(7-24 pta/data_structure/7-24.cpp)
add_executable(7-26 pta/data_structure/7-26.cpp)
add_executable(7-30 pta/data_structure/7-30.cpp)
add_executable(7-37 pta/data_structure/7-37.cpp)
add_executable(7-38 pta/data_structure/7-38.cpp)
add_executable(7-40 pta/data_structure/7-40.cpp)
add_executable(7-45 pta/data_structure/7-45.cpp)
add_executable(testleet leetcode/testleet.cpp)
add_executable(2225 leetcode/2225.cpp)
add_executable(3 leetcode/3.cpp)
add_executable(169 leetcode/169.cpp)
add_executable(349 leetcode/349.cpp)

add_executable(dcbfzvxgvcbfdvcx dcbfzvxgvcbfdvcx.cpp)
add_executable(1003 pta/basicLevel/1003.cpp)
add_executable(1005 pta/basicLevel/1005.cpp)
add_executable(504 lanqiao/504.cpp)
add_executable(502 lanqiao/502.cpp)
add_executable(592 lanqiao/592.cpp)